lox-tests/tests/variable/duplicate_local.stderr
ERROR: Already declared variable 'a' in this local scope
 --> 3:7
  |
3 |   var a = "other"; // Error at 'a': Already a variable with this name in this scope.
  |       ^
